Fix bug 668222 - Thunderbird Does Not Process Meeting Invites from Outlook, Google Calendar. r=mmecca