calendar/base/src/calEvent.js
@@ -154,9 +154,14 @@ calEvent.prototype = {
                     icalprop.value = iprop.value;
                     var propBucket = this.mPropertyParams[iprop.name];
                     if (propBucket) {
-                        for (paramName in propBucket) {
-                            icalprop.setParameter(paramName,
-                                                  propBucket[paramName]);
+                        for (let paramName in propBucket) {
+                            try {
+                                icalprop.setParameter(paramName, propBucket[paramName]);
+                            } catch (e if e.result == Components.results.NS_ERROR_ILLEGAL_VALUE) {
+                                // Illegal values should be ignored, but we could log them if
+                                // the user has enabled logging.
+                                cal.LOG("Warning: Invalid event parameter value " + paramName + "=" + propBucket[paramName]);
+                            }
                         }
                     }
                     icalcomp.addProperty(icalprop);
