calendar/base/src/calTodo.js
@@ -189,9 +189,14 @@ calTodo.prototype = {
                     icalprop.value = iprop.value;
                     var propBucket = this.mPropertyParams[iprop.name]
                     if (propBucket) {
-                        for (paramName in propBucket) {
-                            icalprop.setParameter(paramName,
-                                                  propBucket[paramName]);
+                        for (let paramName in propBucket) {
+                            try {
+                                icalprop.setParameter(paramName, propBucket[paramName]);
+                            } catch (e if e.result == Components.results.NS_ERROR_ILLEGAL_VALUE) {
+                                // Illegal values should be ignored, but we could log them if
+                                // the user has enabled logging.
+                                cal.LOG("Warning: Invalid todo parameter value " + paramName + "=" + propBucket[paramName]);
+                            }
                         }
                     }
                     icalcomp.addProperty(icalprop);
